Minor size and spacing fixes for smaller screens

--- a/app/assets/styles/_layout.scss
+++ b/app/assets/styles/_layout.scss
@@ -67,7 +67,7 @@ main {
       margin-bottom: 1.5rem;
     }
     &-blurb {
-      font-size: .65rem;
+      font-size: .6rem;
 
       &::before, &::after {
         font-size: 1.15rem;
@@ -142,6 +142,7 @@ main {
       text-align: right;
       font-size: .75rem;
       margin-right: 1rem;
+      line-height: 1.1;
     }
 
   }
@@ -193,6 +194,18 @@ main {
     margin-bottom: .25rem;
     font-weight: 400;
     line-height: 1;
+    position: relative;
+
+    &:after {
+      content: '';
+      background: transparentize($black, .9);
+      width: 120%;
+      height: .5rem;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
   }
 
   h4, h3 {
@@ -255,6 +268,8 @@ main {
 
   &-points {
     margin: 0;
+    padding-left: 1rem;
+
     li {
       list-style-type: none;
       &::before {
